# comfyui-workspace-manager

./: .gitignore  LICENSE  README.md  README_for_developer.md  __init__.py  package-lock.json  pyproject.toml  version_control.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish_action.yml
entry/: entry.js
hash/: file_hash_dict.db
scripts/: setupGitHooks.js
service/: db_service.py  file_sync_service.py  media_service.py  node_service.py  scan_my_workflows_folder.py  setting_service.py  twoway_sync_folder_service.py
service/model_manager/: missing_models.py  model_installer.py  model_list.py  model_preview.py  nodes_installer.py
service/share/: cloud_service.py
ui/: .eslintrc.cjs  .gitignore  .prettierrc  entry.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: AddTagToWorkflowPopover.tsx  Api.ts  App.tsx  ManageTagsModal.tsx  ModelsDrawer.tsx  MyCSSReset.tsx  OutlineDrawer.tsx  RecentFilesDrawer.tsx  RecentFilesDrawerMenu.tsx  ViewBackupsModal.tsx  WorkspaceContext.ts  WorkspaceDB.ts  const.ts  defaultGraph.ts  entry.ts  index.css  main.tsx  typiing.d.ts  typing.d.ts  utils.tsx
ui/src/RecentFilesDrawer/: AddTagToWorkflowPopover.tsx  FilesListFolderItem.tsx  FilesListFolderItemRightClickMenu.tsx  ImportFileButton.tsx  ImportFlowsFileInput.tsx  ImportJsonFlows.tsx  InsertWorkflowToCanvas.ts  ItemsList.tsx  ManageTagsModal.tsx  MoreActionMenu.tsx  MultipleSelectionOperation.tsx  MyTagsRow.tsx  RecentFilesDrawer.tsx  RecentFilesDrawerMenu.tsx  WorkflowListItem.tsx  types.ts  (+3 more)
(+203 files in other folders)
